# YoutubePlaylistDownloader

./: .dockerignore  .gitignore  Dockerfile  GUI plan.md  LICENSE  README.md  compose.yaml  docker-entrypoint.sh  project plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.py  yt-playlist-config.json  yt-playlist-main.py  ytpl-sync-entry.py
.gitea/workflows/: build-docker-image.yml  integration.yml  release.yml  test.yml  unit-tests.yml
.github/workflows/: build-release.yml  build.yml  build_v2.yml  dependency-updates.yml  integration.yml  lint_ruff.yml  release.yml  unit-tests.yml
config/: yt-playlist-config.example.json
src/app/: cli.py  main.py
src/app/config/: settings.py
src/app/core/database/: db.py
src/app/core/download/: downloader.py  queue_manager.py
src/app/core/sync/: executor.py  service.py
src/app/core/utils/: deps.py
tests/: conftest.py  dummy_config.py  integration_full_workflow_test.py  integration_playlist_test.py  temp_config.py  test_cli_flags.py  test_cli_update_and_logging.py  test_config_loader_basic.py  test_download_quality_format.py  test_download_video_edgecases.py  test_downloader_sanitize_and_path.py  test_event_surface.py  test_fetch_videos.py  test_integration_audio.py  test_integration_both.py  test_integration_video.py  test_manager_connection_warning.py  test_playlist_manager_run_behaviour.py  test_renumber_and_cleanup.py  test_reorder_and_delete.py  test_settings_default_config.py
ytplaylist/: cli.py  downloader.py  manager.py
